--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "hans-blog"
@@ -16,6 +17,3 @@ format:
       - cosmo
       - brand
     css: styles.css
-
-
-
